Controllers class refactoring / Post controller queries refactoring
